--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -119,24 +119,27 @@ html {
 
 .gallery-grid img {
   width: 100%;
-  height: auto;
+  height: 100%;
   border-radius: 8px;
+  object-fit: cover;
 }
 
 
 /* mobile/tablet */
-@media only screen and (max-device-width: 1600px) {
+@media only screen and (max-width: 1600px) {
   .axiom-container {
     height: unset;
-  }
-
-  .logo-image {
-    width: 75%;
   }
 
   .gallery-grid {
     grid-template-columns: repeat(auto-fit, minmax(80%, 1fr));
   }
   
+}
+
+@media only screen and (max-width: 600px) {
+  .logo-image {
+    width: 75%;
+  }
 }
 
