--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -21,6 +21,7 @@ body,
 p
  {
   font-family: 'Courier New', monospace;
+  line-height: 2.2rem;
 }
 
 h1,
@@ -30,6 +31,18 @@ h4,
 h5,
 h6 {
   font-family: Arial, sans-serif;
+}
+
+h1 {
+  font-weight: 600;
+}
+
+h2 {
+  font-weight: 800;
+}
+
+h3 {
+  font-weight: 700;
 }
 
 .mt {
@@ -80,18 +93,15 @@ html {
   padding-top: 1rem;
 }
 
-/* #morePlot {
-  display: none;
-} */
 #morePlot {
-  display: none; /* Hidden by default */
+  display: none; 
   opacity: 0;
-  transition: opacity 0.5s ease; /* Transition opacity for fade effect */
+  transition: opacity 0.5s ease;
 }
 
 #morePlot.show {
-  display: inline; /* Show when the class is added */
-  opacity: 1; /* Fully visible */
+  display: inline; 
+  opacity: 1; 
 }
 
 /*buttons*/
@@ -139,6 +149,10 @@ html {
 .logo-image {
   width: 35rem;
   height: auto;
+}
+
+.sub-title {
+  letter-spacing: 0.3rem;
 }
 
 /*background images */
